--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,29 @@
-# Ignore the contents of the _site directory and other cache directories
+# Jekyll build outputs
 _site/
 .sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+vendor/
 
-# Ignore the directory for local files during development
-local/
-
-# Ignore the Gemfile that is generated
+# Ruby
 Gemfile.lock
-
-# Ignore files created by npm
-node_modules
-package-lock.json
-
-# Ignore the vendor file at root level and bundle for alternative installation
-/vendor/
 .bundle/
 
-# Ignore folders related to IDEs
-.vscode/
-
-# Ignore files created by MacOS
+# OS files
 .DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# IDE files
+.vscode/
+.idea/
+*.code-workspace
+
+# Logs
+*.log
+
+# Temporary files
+tmp/
+temp/
